--- a/css/j79.date.selector.css
+++ b/css/j79.date.selector.css
@@ -1,6 +1,5 @@
 .date-selector{}
-.date-selector .item{ width:12%; display: inline-block; margin-right: 1rem;}
-.date-selector .item:first-child{margin-right: 0;width:10%; }
-.date-selector .item:first-child>select{ width: 100%;}
-.date-selector .item>select{ width: 80%; display: inline-block; vertical-align: center;}
-.date-selector .item>b{ width: 20%; white-space: nowrap; }
+.date-selector .item{ width:4rem; display: inline-block; margin-right:0rem;vertical-align: middle;}
+
+.date-selector .item>select{ width: 100%; display: inline-block; vertical-align: center; padding:0 0.1rem;}
+.date-selector .date-selector-container >b{ width: auto; padding: 0 0.5rem; white-space: nowrap; display: inline-block; vertical-align: middle;}
