--- a/pages/css/jr.CSS
+++ b/pages/css/jr.CSS
@@ -133,3 +133,10 @@
         transform: scaleY(1);
     }
 }
+
+
+.has-error-server{
+    border-color: #a94442;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
