--- a/css/j79.img.area.selector.css
+++ b/css/j79.img.area.selector.css
@@ -1,2 +1,4 @@
 .img-area-selector .selected{ border:1px solid #ffffff}
 .img-area-selector .area-selection .no{ background-color: #000; color: #fff; border-radius: 1vh; display: inline-block; padding: 0 0.4rem; font-size: 0.4rem;font-weight: normal}
+.img-area-selector .area-selection .del{display: inline-block; padding:0.5rem 1rem; color: #fff; font-family: Arial;}
+.img-area-selector .area-selection .del:hover{ text-decoration:none; background-color:#0d58c8; color: #fff; }
